<resources>
    <string name="app_name" translatable="false">Contactos\nque sirven</string>
    <string name="mantenimientohogar">Mantenimiento del hogar</string>
    <string name="serviciosnegocio">Servicios de negocio</string>
    <string name="obraconstruccion">Obra y construcción</string>
    <string name="alquileres">Alquileres</string>
    <string name="delivery">Delivery</string>
    <string name="capacitacion">Capacitación</string>
    <string name="serviciosanimales">Servicios para animales</string>
    <string name="medicinasalud">Medicina y salud</string>
    <string name="serviciosautomoviltransporte">Servicios de automovil, transporte</string>
    <string name="eventos">Eventos</string>
    <string name="oficinas">Oficinas</string>
    <string name="limpieza">Limpieza</string>
    <string name="electrodomesticos">Electrodomésticos</string>
    <string name="cerrajeria">Cerrajería</string>
    <string name="controlplagas">Control de plagas</string>
    <string name="telefonia">Telefonía</string>
    <string name="piscina">Piscina</string>
    <string name="jardineria">Jardinería</string>
    <string name="computacion">Computación</string>
    <string name="alarmas">Alarmas</string>
    <string name="auditoria">Auditoría</string>
    <string name="contabilidad">Contabilidad</string>
    <string name="abogacia">Abogacía</string>
    <string name="marketing">Marketing</string>
    <string name="agrimensura">Agrimensura</string>
    <string name="agronomia">Agronomía</string>
    <string name="bebidasalimentos">Bebidas y alimentos</string>
    <string name="ropaaccesorios">Ropa y accesorios</string>
    <string name="ingenieria">Ingeniería</string>
    <string name="arquitecto">Arquitectura</string>
    <string name="gestionobras">Gestión de obras</string>
    <string name="albanileria">Albañil</string>
    <string name="carpintero">Carpintería</string>
    <string name="electricista">Electricista</string>
    <string name="singuero">Zinguero</string>
    <string name="serviciosgeneral">Servicios generales</string>
    <string name="rellenos">Rellenos</string>
    <string name="mudanza">Mudanza</string>
    <string name="parquizacion">Parquizacion</string>
    <string name="pintor">Pintor/a</string>
    <string name="gasista">Gasista</string>
    <string name="disenador">Diseñador</string>
    <string name="plomero">Plomería</string>
    <string name="techista">Techista</string>
    <string name="picapedrero">Picapedrero</string>
    <string name="movimientosindustriales">Movimientos industriales</string>
    <string name="herrero">Herrería</string>
    <string name="insumoscorralon">Insumos de corralón</string>
    <string name="insumoselectricidad">Insumos de electricidad</string>
    <string name="herramientas">Herramientas</string>
    <string name="maquinaria">Maquinaria</string>
    <string name="peluqueria">Peluqueria</string>
    <string name="manicurapedicura">Manicura Pedicura</string>
    <string name="cadeteria">Cadetería</string>
    <string name="farmacia">Farmacia</string>
    <string name="deportesbalon">Deportes de balón</string>
    <string name="deportesmontana">Deportes de montaña</string>
    <string name="clasesparticularessecundario">Clases particulares secundario</string>
    <string name="clasesparticularesuniversidad">Clases particulares universidad</string>
    <string name="artesmarciales">Artes marciales</string>
    <string name="cursosentretenimiento">Cursos entretenimiento</string>
    <string name="deportesactuaticos">Deportes acuáticos</string>
    <string name="entretenimiento">Entretenimiento</string>
    <string name="idioma">Idioma</string>
    <string name="relajacion">Relajación</string>
    <string name="cursosprofesionales">Cursos profesionales</string>
    <string name="alojamientoanimales">Alojamiento</string>
    <string name="veterinaria">Veterinaria</string>
    <string name="transporteanimales">Transporte</string>
    <string name="esteticaanimales">Estética</string>
    <string name="paseoentretenimiento">Paseo y entretenimiento</string>
    <string name="nutricionista">Nutrición</string>
    <string name="traumatologia">Traumatología</string>
    <string name="geriatria">Geriatría</string>
    <string name="oftalmologia">Oftalmología</string>
    <string name="enfermeria">Enfermería</string>
    <string name="podologia">Podología</string>
    <string name="pediatria">Pediatría</string>
    <string name="ambulancia">Ambulancia</string>
    <string name="cardiologia">Cardiologia</string>
    <string name="psicologia">Psicología</string>
    <string name="cuidadoadultosmayores">Cuidado de adultos mayores</string>
    <string name="serviciosdiscapacitados">Servicios para personas con discapacidad</string>
    <string name="grua">Grúa</string>
    <string name="gomeria">Gomería</string>
    <string name="mecanico">Mecánico</string>
    <string name="electricidadautomotor">Electricidad automotor</string>
    <string name="taxi">Taxi</string>
    <string name="remisse">Remisse</string>
    <string name="traffic">Traffic</string>
    <string name="interurbano">Interurbano</string>
    <string name="flete">Flete</string>
    <string name="chapapintura">Chapa y pintura</string>
    <string name="fotografia">Fotografía</string>
    <string name="musica">Música</string>
    <string name="organizacion">Organización</string>
    <string name="dispensersexpendedoras">Dispensers y expendedoras</string>
    <string name="equipofitness">Equipo fitness</string>
    <string name="fotocopiadoras">Fotocopiadoras</string>
    <string name="montacargasyascensores">Montacargas y ascensores</string>
    <string name="tiempoRespReview">¿Fueron puntuales?</string>
    <string name="calidadTrabajoReview">¿Cómo fué la calidad de servicio?</string>
    <string name="atencionReview">¿Cómo fue la atención recibida?</string>
    <string name="calificacionFinalReview">Para finalizar, haga una pequeña calificación general</string>
    <string name="pequenaDescripcion">Escriba una reseña corta</string>
    <string name="oauthId" translatable="false">421055195921-q7vcj31bcr0lmhe9s4p9176r44ndma8m.apps.googleusercontent.com</string>
    <string name="previo">Previo</string>
    <string name="siguiente">Siguiente</string>
    <string name="telefono_1">Telefono 1:</string>
    <string name="telefono_2">Telefono 2:</string>
    <string name="incluir_direcci_n_de_mail">Incluir dirección de mail</string>
    <string name="horario_atenci_n">Horario Atención</string>
    <string name="a">a</string>
    <string name="de">De</string>
    <string name="contrasena_erroneas">Credenciales erróneas</string>
    <string name="sesion_iniciada">Sesión iniciada</string>
    <string name="error_al_iniciar_sesion">Hubo un error mientras se intentó iniciar sesión. Reinténtelo</string>
    <string name="usuario_creado">Usuario creado satisfactoriamente</string>
    <string name="error_al_registrarse">Hubo un error mientras se intentó crear el usuario. Reinténtelo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="email">Email</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="complete_info_contacto">Complete la información de contacto</string>
    <string name="escriba_descripcion">Y para finalizar, escriba una pequeña descripción sobre usted</string>
    <string name="selecciona_area_trabajo">Selecciona sus áreas de trabajo</string>
    <string name="selecciona_rango_trabajo">Selecciona el rango de trabajo</string>
    <string name="reviews">Reseñas</string>
    <string name="cancelar">CANCELAR</string>
    <string name="finalizar">Finalizar</string>
    <string name="go_to_profile">Go to Profile</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="aceptar">Aceptar</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="registrarse">Registrate</string>
    <string name="descripcion_personal">Descripción personal</string>
    <string name="contact_info">Información de Contacto</string>
    <string name="selecciona_foto">Añade una foto</string>
    <string name="calificar">Calificar al Prestador de Servicio</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="seguro_eliminar">Estás seguro de querer eliminar la cuenta?</string>
    <string name="añadirContacto">Añadir a agenda</string>
    <string name="removerContacto">Remover Contacto</string>
    <string name="social_apps_noañadidas">Redes sociales a añadir</string>
    <string name="social_apps_añadidas">Redes sociales ya añadidas</string>
    <string name="introduzcaUsuarioInstagram">Introduzca su nombre de usuario de Instagram</string>
    <string name="introduzcaUsuarioFacebook">Introduzca su ID de Facebook</string>
    <string name="introduzcaNumeroWhatsapp">Introduzca su número de Whatsapp</string>
    <string name="deseaMostrarSuEmail">¿Desea mostrar su Email?</string>
    <string name="removerInstagram">Seguro que desea remover Instagram?</string>
    <string name="removerFacebook">Está seguro que desea remover Facebook?</string>
    <string name="removerWhatsapp">Está seguro que desea remover Whatsapp?</string>
    <string name="removerMail">Está seguro que no desea mostrar su mail?</string>
    <string name="selecciona_social_networks">Añade o elimina links a las redes sociales</string>
    <string name="chatHint">Escribe mensaje</string>
    <string name="chats">Chats</string>
    <string name="buscar">Buscar</string>
    <string name="contactos">Contactos</string>
    <string name="email_erroneo">Email inválido</string>
    <string name="wrong_password">Contraseña inválida</string>
    <string name="wrong_username">Nombre de usuario inválido</string>
    <string name="error_sign_up">No se pudo crear usuario</string>
    <string name="error_iniciar_sesion">error al iniciar sesion</string>
    <string name="error_google">Error al iniciar sesion con Google</string>
    <string name="passwords_dont_match">No coinciden contraseñas</string>
    <string name="usuario_existente_pro">El nombre de usuario ya existe</string>
    <string name="error_coneccion">Parece que no tiene internet</string>
    <string name="cliente">Cliente</string>
    <string name="prestador_servicio">Prestador de servicio</string>
    <string name="no_tienes_un_usuario">No tienes un usuario?</string>
    <string name="crear_usuario_pestadorservicio">Crear usuario como prestador de servicio</string>
    <string name="todavia_no_tienes_chats">Todavia no tienes chats. No te preocupes! Nuevos mensajes llegarán muy pronto</string>
    <string name="ingrese_telefono">Ingrese un teléfono</string>
    <string name="contador_contratos">Contratos cumplidos:</string>
    <string name="tutorial">Tutorial</string>
    <string name="contratos_finalizados">Contratos finalizados</string>
    <string name="todavia_no_tienes_completados">Los contratos finalizados aparecerán por acá</string>
    <string name="ingrese_dni">Ingrese dni</string>
    <string name="name">Nombre y Apellido</string>
    <string name="opcional">Opcional</string>
    <string name="no_posee_obra_social">No posee obra social</string>
    <string name="no_posee_movilidad_propia">No posee movilidad propia</string>
    <string name="trabaja_solo">Trabaja solo por su cuenta</string>
    <string name="no_acepta_credito">No acepta tarjeta de crédito</string>
    <string name="no_acepta_debito">No acepta tarjetas de débito</string>
</resources>