<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/convertirEnPro"
        android:icon="@drawable/trabajo"
        android:title="@string/transformar_en_perfil_de_trabajo"
        app:showAsAction="never" />
    <item
        android:id="@+id/edit"
        android:icon="@drawable/edit_24dp"
        android:title="@string/editar_perfil"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/eliminarCuenta"
        android:title="@string/eliminar_cuenta"
        app:showAsAction="never" />

    <item
        android:id="@+id/signOut"
        android:title="@string/cerrar_sesi_n"
        app:showAsAction="never" />

    <item
        android:id="@+id/calificar"
        android:title="@string/calificar"
        app:showAsAction="never" />

    <item
        android:id="@+id/addContact"
        android:title="@string/añadirContacto"
        app:showAsAction="never" />
</menu>