<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BLUEGRAY">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvContadorContratos"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/tvContadorContratos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/contador_contratos"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvContadorContratos"
        android:layout_centerHorizontal="true"
        android:text="0"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnTutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnSignIn"
        android:layout_margin="8dp"
        android:background="@drawable/rectangle_outline"
        android:text="@string/tutorial"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="@drawable/rectangle_outline"
        android:text="@string/iniciar_sesi_n"
        android:textAllCaps="false" />

</RelativeLayout>
