<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/TEALOSCURO">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUsername"
                style="@style/descTextView"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/usuario" />

            <EditText
                android:id="@+id/etUsername"
                style="@style/editText"
                android:inputType="textPersonName|textCapWords" />

            <TextView
                android:id="@+id/tvEmail"
                style="@style/descTextView"
                android:text="@string/email" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/editText"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvpassword"
                style="@style/descTextView"
                android:text="@string/contrase_a" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/editText"
                android:inputType="textPassword"
                android:singleLine="true" />

            <TextView
                style="@style/descTextView"
                android:text="@string/confirmar_contrase_a" />

            <EditText
                android:id="@+id/edConfirmPassword"
                style="@style/editText"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnSignUp"
                style="@style/normalButton"
                android:background="@drawable/rectangle_outline"
                android:padding="10dp"
                android:text="@string/registrarse"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>