<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvNoMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/todavia_no_tienes_chats"
        android:textAlignment="center"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvChats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rectangle_outline"
        android:text="@string/contratos_finalizados"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvNoCompleted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/todavia_no_tienes_completados"
        android:textAlignment="center"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvCompleted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>