<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:windowSoftInputMode="adjustPan">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUsername"
                style="@style/descTextView"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/email" />

            <EditText
                android:id="@+id/etUsername"
                style="@style/editText"
                android:ems="10"
                android:inputType="text|textEmailAddress"
                android:singleLine="true" />

            <TextView
                style="@style/descTextView"
                android:text="@string/contrase_a" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/editText"
                android:ems="10"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/buttonAcceptLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle_outline"
                android:padding="10dp"
                android:text="@string/iniciar_sesi_n"
                android:textAllCaps="false" />

            <LinearLayout
                android:background="@drawable/rectangle_outline"
                android:id="@+id/buttonSignInWithGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/transparent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_google_logo"
                    android:text="babaas" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iniciar_sesi_n" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_tienes_un_usuario" />

                <Button
                    android:id="@+id/buttonSignUp"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/rectangle_outline"
                    android:padding="8dp"
                    android:text="@string/registrarse"
                    android:textAllCaps="false"
                    android:textColor="@color/TEAL" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>